// Schema definition for the axe CLI ↔ VS Code Extension protocol.
// This file serves as the single source of truth for the protocol.
// The wire format is JSON Lines (one JSON object per line).
// protoc generates Go and TypeScript types from this file.

syntax = "proto3";

package axe.preview;

option go_package = "github.com/k-kohey/axe/internal/preview/previewproto";

// Command is sent from the extension to the CLI via stdin.
// stream_id identifies the target stream (UUID v4, generated by extension).
message Command {
  string stream_id = 1;
  oneof payload {
    AddStream add_stream = 2;
    RemoveStream remove_stream = 3;
    SwitchFile switch_file = 4;
    NextPreview next_preview = 5;
    Input input = 6;
  }
}

// AddStream creates a new preview stream.
// The CLI allocates a simulator from the device pool based on device_type + runtime.
message AddStream {
  string file = 1;            // Swift file path to preview
  string device_type = 2;     // e.g. "com.apple.CoreSimulator.SimDeviceType.iPhone-16-Pro"
  string runtime = 3;         // e.g. "com.apple.CoreSimulator.SimRuntime.iOS-18-2"
}

// RemoveStream stops and removes a preview stream.
message RemoveStream {}

// SwitchFile changes the previewed file within an existing stream (hot-reload).
message SwitchFile {
  string file = 1;
}

// NextPreview cycles to the next #Preview block in the current file.
message NextPreview {}

// Input forwards user interaction (touch/text) to the simulator.
message Input {
  oneof event {
    TouchEvent touch_down = 1;
    TouchEvent touch_move = 2;
    TouchEvent touch_up = 3;
    TextEvent text = 4;
  }
}

message TouchEvent {
  double x = 1;  // 0.0–1.0 (left to right)
  double y = 2;  // 0.0–1.0 (top to bottom)
}

message TextEvent {
  string value = 1;  // single character
}

// Event is sent from the CLI to the extension via stdout.
// stream_id identifies which stream this event belongs to.
message Event {
  string stream_id = 1;
  oneof payload {
    Frame frame = 2;
    StreamStarted stream_started = 3;
    StreamStopped stream_stopped = 4;
    StreamStatus stream_status = 5;
  }
}

// Frame contains a base64-encoded JPEG preview image.
message Frame {
  string device = 1;  // device name, e.g. "iPhone 16 Pro"
  string file = 2;    // previewed file path
  string data = 3;    // base64-encoded JPEG
}

// StreamStarted is sent when an AddStream completes successfully.
message StreamStarted {
  int32 preview_count = 1;  // number of #Preview blocks in the file
}

// StreamStopped is sent when a stream ends (error or user action).
message StreamStopped {
  string reason = 1;       // e.g. "build_error", "runtime_error", "removed"
  string message = 2;      // human-readable detail
  string diagnostic = 3;   // compiler output excerpt for build errors
}

// StreamStatus reports progress during stream initialization.
message StreamStatus {
  string phase = 1;  // "booting", "building", "installing", "running"
}
